--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,12 @@
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   /* background-color: black; */
 }
 
 .dashboard-box {
   display: flex;
-  gap: 10rem;
+  
 }
